--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#cta">Dropdown</a>
+                        <a class="nav-link" href="#cta">Find Pets</a>
                     </li>
                 </ul>
             </div>
